# python-template-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/hello_world/: __init__.py  main.py
tests/: test_main.py
